fixed dark mode size for microsoft

--- a/resources/styleSheets/game/Dark.css
+++ b/resources/styleSheets/game/Dark.css
@@ -1,7 +1,7 @@
 #GameView {
     -fx-background-color: rgba(6, 6, 6, 0.87);
     -fx-base: derive(rgba(53, 49, 47, 0.77), 10%);
-    -fx-font-size: 10;
+    -fx-font-size: 11;
     -fx-font-family: "American Typewriter";
 }
 
@@ -12,15 +12,14 @@
     -fx-background-color: #2a2a2a;
 }
 
-#PlayerInfo, #BetInfo, #ReadyB#winner-bet-view, #loser-bet-view .label {
-    -fx-text-fill: rgba(185, 137, 255, 0);
+#PlayerInfo, #ReadyButton, .label {
     -fx-font-weight: bold;
-    -fx-font-size: 14;
+    -fx-font-size: 13;
+    -fx-text-fill: #ffffff;
 }
 
-
 #BetView {
-    -fx-spacing: 5;
+    -fx-spacing: 8;
 }
 
 #ReadyButton:hover {
@@ -40,6 +39,14 @@
     -fx-border-color: #d1dad1;
 }
 
+#shown-card .label {
+    -fx-font-size: 10;
+}
+
+#winner-bet-view, #loser-bet-view {
+    -fx-background-radius: 10;
+}
+
 #loser-bet-view {
     -fx-background-color: rgba(41, 0, 8, 0.83);
 }
@@ -50,6 +57,7 @@
 
 #loser-bet-view, #winner-bet-view .label {
     -fx-text-fill: #ffffff;
+    -fx-font-size: 12;
 }
 
 #PlayerInfo, #ReadyButton {
